2003-05-09  Alexandre Oliva  <aoliva@redhat.com>

	* reload1.c (reload_cse_move2add): Don't turn an implicit
	truncation into a self-set in the narrow mode.

2003-05-09  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md (clzsi2): The CLZ instruction is predicable.

2003-05-09  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.c: Formatting.

2003-05-09  Diego Novillo  <dnovillo@redhat.com>

	* tree-dump.c (dequeue_and_dump): Use CONSTRUCTOR_ELTS,
	instead of TREE_OPERAND to access the operand of a
	CONSTRUCTOR node.

2003-05-09  Diego Novillo  <dnovillo@redhat.com>

	* tree-dump.c (dequeue_and_dump): CONSTRUCTOR nodes contain only
	one operand.

2003-05-09  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* toplev.h (warning_with_file_and_line): Don't declare.
	(error_with_file_and_line): Likewise.
	* diagnostic.c (error_with_file_and_line): Remove.
	(warning_with_file_and_line): Likewise.

2003-05-09  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* c-parse.in (if_stmt_locus): New object.
	(if_prefix rule): Use it.  Don't use warning_with_file_and_line.
	(select_or_iter_stmt rule): Likewise.
	(if_stmt_file): Remove.
	(if_stmt_line): Likewise.
	* jump.c: include "diagnostic.h"
	(never_reached_warning): Don't use warning_with_file_and_line. 
	* Makefile.in (jump.o): Add dependce on diagnostic.h

2003-05-09  Alan Modra  <amodra@bigpond.net.au>

	* expr.c (move_block_from_reg): Remove "size" parm.  Localize vars.
	Move code handling pieces not larger than a word to..
	* function.c (assign_parms): ..here, but use change_address instead
	of adjust_address and operand_subword, and expand_binop instead of
	expand_shift.  Adjust calls to move_block_from_reg.
	* expr.h (move_block_from_reg): Update declaration.
	(copy_blkmode_from_reg): Formatting.
	* Makefile.in (function.o): Add $(OPTABS_H) to deps.
	* config/alpha/alpha.c (alpha_setup_incoming_varargs): Adjust
	move_block_from_reg calls.
	* config/arc/arc.c (arc_setup_incoming_varargs): Likewise.