@@ -1,0 +1,2 @@
+#!/bin/sh
+cp -R $2/* $1
